Code Quality: Added package and cleaned up classes